# flir_waam

./: .gitignore  README.md  pyproject.toml
src/flir_toolbox/: __init__.py  flir_toolbox.py
yolov8/: data_gen_tip.py  data_gen_torch.py  data_gen_wire.py  test.py  test_tip_wire.py  training.py
yolov8/datasets/tip_wire_yolov8_data/: data.yaml
yolov8/datasets/tip_wire_yolov8_data/train/: labels.cache
yolov8/datasets/tip_yolov8_data/train/: labels.cache
yolov8/datasets/tip_yolov8_large_data/train/: labels.cache
yolov8/datasets/wire_yolov8_data/train/: labels.cache
yolov8/tip_wire_yolov8_data/: data.yaml
yolov8/tip_wire_yolov8_data/train/labels/: 10_png.rf.3b0a9d8625ea0ca494e5c1a5b9f90949.txt  11_png.rf.5db3dcbdbce094ae22d0be0ec973e5ea.txt  13_png.rf.0fa475dac56d821ca001a7f2cfa35fa9.txt  14_png.rf.3e7913352436af11b5e41f787555825b.txt  15_png.rf.96e833e30b1e9699f9e3677d312652d0.txt  16_png.rf.74bffd011ced6a981a9ab78338612cbf.txt  17_png.rf.0eda8d94f6e1a6601a6bcc4a45ac01b0.txt  18_png.rf.e7d5dcbc842b516203f22aa668d6d4de.txt  1_png.rf.7d72a97d9045875bcd37fbe722e7e1c1.txt  21_png.rf.68809b44edd0f55be7c4fdf42be1af95.txt  23_png.rf.dafb32f1d394596f33c27266641d6dbe.txt  24_png.rf.7e7c71f73f9c53c6b6821cfc20ed28fb.txt  28_png.rf.52c393af424f2f53815cfac7542dea5e.txt  29_png.rf.a589b018cbfdcb8ab9693b0bb7525c93.txt  33_png.rf.4d622f686e79adecfd50a58c22e7015a.txt  34_png.rf.2c8e678edbe3451b53bd3243dc8481ba.txt  39_png.rf.99c9efb0b57b0f77269c4f117302febf.txt  (+32 more)
yolov8/tip_yolov8_large_data/: data.yaml
yolov8/wire_yolov8_data/: data.yaml
(+421 files in other folders)
