[build-system]
requires = ["poetry-core>=1.8.0", "wheel",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flir-waam"
version = "0.1.0"
description = "FLIR WAAM Helper Functions."

packages = [
    { include = "flir_toolbox", from = "src" },
    { include = "torch_tracking", from = "src" }
]

authors = ["Honglu He <heh6@rpi.edu>",]
maintainers = ["Honglu He <heh6@rpi.edu>",]

include = ["CHANGELOG.md", "LICENSE", "py.typed","torch_tracking/torch.pt"]
license = "BSD-3-Clause"
readme = "README.md"

repository = "https://github.com/hehonglu123/flir_waam"


[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "<2.0.0"
general_robotics_toolbox = "^0.7.2"
shapely = "^2.0.4"
opencv-python = "4.8.0.76"
